<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcmenard.applivisiteur.JSON_Classement">



    <TableLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="*" android:background="#ffffff"
        android:id="@+id/tableLayoutgr1">
        <TableRow android:background="#000000">

            <TextView  android:text="Equipes" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="0dp" android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip" />

            <TextView android:id="@+id/amount" android:layout_weight="0.2" android:layout_height="wrap_content" android:layout_width="0dp"  android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip"
                android:text="@string/titre6" />
            <TextView android:text="@string/titre1"  android:layout_weight="0.2" android:layout_height="wrap_content" android:layout_width="0dp" android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip"/>
            <TextView android:text="@string/titre2"  android:layout_weight="0.2" android:layout_height="wrap_content" android:layout_width="0dp" android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip"/>
            <TextView android:text="@string/titre3"  android:layout_weight="0.2" android:layout_height="wrap_content" android:layout_width="0dp" android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip"/>
            <TextView android:text="@string/titre4"  android:layout_weight="0.2" android:layout_height="wrap_content" android:layout_width="0dp" android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip"/>
            <TextView android:text="@string/titre5"  android:layout_weight="0.2" android:layout_height="wrap_content" android:layout_width="0dp" android:textAlignment="center" android:textColor="#ffffff" android:background="#A22C43" android:layout_margin="1dip"/>
        </TableRow>

        <TableRow android:background="#000000">

            <ListView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/list" />


        </TableRow>

    </TableLayout>

</RelativeLayout>